--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ p {
 
 .text-white {
   color: white;
+  
 }
 
 nav,
@@ -30,11 +31,18 @@ nav,
   background-color: black;
   height: 60px;
   /* Your code goes here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .container {
   width: 500px;
   /* Your code goes here */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .button {
